Update PassHash.java